# annadata-llama-cpp

./: .gitignore  .npmignore  BUILD_SCRIPT_TEST_RESULTS.md  BUILD_WASM_GUIDE.md  CHANGELOG.md  LlamaCpp.podspec  LlamaCppCapacitor.podspec  NPM_PUBLISH_GUIDE.md  PUBLISH_GUIDE.md  Package.swift  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  SPECULATIVE_DECODING_STATUS.md  WASM_COMPLETION_CHECKLIST.md  build-complete-arm64.sh  build-native.sh  package-lock.json  package.json  test-build-script.sh  tsconfig.json
android/: build.gradle
android/src/main/: AndroidManifest.xml  CMakeLists-arm64.txt  CMakeLists-x86_64.txt  CMakeLists.txt  jni.cpp
android/src/main/java/ai/annadata/plugin/capacitor/: LlamaCpp.java  LlamaCppPlugin.java
cpp/: README.md  cap-completion.cpp  cap-completion.h  cap-embedding.cpp  cap-embedding.h  cap-ios-bridge.cpp  cap-llama.cpp  cap-llama.h  cap-native-server.cpp  cap-native-server.h  cap-wasm-fs.cpp  cap-wasm-jspi.cpp  cap-wasm-jspi.h  cap-wasm-vfs.cpp  common.cpp  llama-mmap.cpp  llama-model.cpp
cpp/ggml-cpu/: ggml-cpu-impl.h
cpp/tools/mtmd/: mtmd-helper.h  mtmd.h
docs/: API_COVERAGE_VERIFICATION.md  API_DOCUMENTATION.md  APP_STORE_SIZE.md  CHANGES_APPLIED.md  CODE_ANALYSIS_IOS_ANDROID_PWA_BUILD.md  EMBEDDING_FIXES_APPLIED.md  EMBEDDING_IMPLEMENTATION.md  EMBEDDING_IMPLEMENTATION_COMPLETE.md  EMBEDDING_MOCK_FIX_VERIFIED.md  EMBEDDING_NATIVE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.txt  IOS_BRIDGE_EXPLANATION.md  IOS_IMPLEMENTATION_GUIDE.md  LOW_LEVEL_DESIGN.md  MOBILE_APP_ARCHITECTURE.md  NPM_PUBLISH_GUIDE.md  PWA_RELEASE_CHECKLIST.md  PWA_RELEASE_NOTES.md  PWA_ROLLOUT_GUIDE.md  PWA_WASM_IMPLEMENTATION_PLAN.md  SIZE_ANALYSIS.md  VERSION_COMPARISON.md  WASM_FFI_IMPLEMENTATION.md  WASM_IMPLEMENTATION_SUMMARY.md
examples/: grammar-example.ts  speculative-decoding-example.ts
ios/: CMakeLists-arm64.txt  CMakeLists-x86_64.txt  CMakeLists.txt
ios/Frameworks/llama-cpp.framework/: llama-cpp
ios/Frameworks/llama-cpp.framework/Versions/A/Resources/: Info.plist
ios/Sources/LlamaCppPlugin/: LlamaCpp.swift  LlamaCppPlugin.swift
scripts/: bootstrap.sh  build-wasm.sh  build-worker.mjs  copy-wasm-assets.mjs  emcc-capture-link.sh  package-embed-wasm.mjs  pwa-release-gate.sh  sync-annadata-app-wasm.mjs  verify-pack-artifacts.mjs
src/: definitions.ts  index.ts  web.ts
src-rust/: Cargo.toml  build.rs
src-rust/.cargo/: config.toml
src-rust/pkg/: llama_engine.js
src-rust/pkg-embed/: library_bindgen.js  llama_engine.d.ts  llama_engine.wasm  llama_engine_bg.wasm  llama_engine_bg.wasm.d.ts  package.json
src-rust/src/: engine.rs  ffi.rs  lib.rs  memory.rs  model.rs  model_registry.rs  stream.rs
src/isomorphic/: errors.ts  model.admission.ts  model.scheduler.ts  provider.factory.ts  provider.interface.ts  provider.native.ts  provider.web.ts  wasmMemoryCalibration.ts  wasmMemoryPolicy.ts
src/storage/: manifest.ts  opfs.store.ts
src/workers/: async-file.ts  heapfs.ts  llm.worker.ts  wasm.engine.ts  worker.protocol.ts
test/: jest.pwa.config.cjs  tsconfig.jest.json
test/pwa/: model-scheduler.smoke.test.ts  multi-model.parallel.test.ts  wasmMemoryCalibration.test.ts  wasmMemoryPolicy.test.ts  web-provider.contract.test.ts  worker.smoke.test.ts
